# rust-lambda-test-1

./: .gitignore  README.md  samconfig.toml  template.yaml
rust_app/: Cargo.toml
rust_app/src/: main.rs
rust_app/src/lib/: concerto.rs  concerto_1_0_0.rs  mod.rs  org_accordproject_acceptanceofdelivery_0_15_0.rs  org_accordproject_address_0_2_0.rs  org_accordproject_contract_0_2_0.rs  org_accordproject_geo_0_2_0.rs  org_accordproject_organization_0_2_0.rs  org_accordproject_runtime_0_2_0.rs  utils.rs
rust_app/src/logic/: logic.rs  mod.rs
